--- a/_00_ShopStop/views/home/index.html
+++ b/_00_ShopStop/views/home/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ShopStop</title>
 
-    <link rel="stylesheet" href="../../content/styles/site.css">
+    <link rel="icon" type="image/x-icon" href="../../content/images/favicon.ico" >
+    <link rel="stylesheet" type="text/css" href="../../content/styles/site.css"/>
 
 </head>
 
