--- a/_08_SoftUniWiki/views/pages/create.hbs
+++ b/_08_SoftUniWiki/views/pages/create.hbs
@@ -3,7 +3,9 @@
     <div class="spacer">
         <form action="create" method="post">
             <label>Article title</label>
-            <input type="text" class="title" name="title">
+            <input type="text" class="title" name="title" placeholder="Article title">
+            <label>Image URL</label>
+            <input type="url" class="imageUrl" name="imageUrl" placeholder="Image URL">
             <label>Content</label>
             <textarea name="content"></textarea>
             <input type="submit" value="Submit">
