--- a/_08_SoftUniWiki/views/pages/article.hbs
+++ b/_08_SoftUniWiki/views/pages/article.hbs
@@ -1,12 +1,14 @@
 <div class="spacer">
-    <h2>Astronomy
+    <h2>{{article.title}}
         <div class="controls">
+            {{#if currentUser}}
             <a href="/edit/{{article._id}}">[edit]</a>
             <a href="/history/{{article._id}}">[history]</a>
+            {{/if}}
         </div>
     </h2>
     <article>
-
+            <img src="{{lastEdit.imageUrl}}" >
             <p>
                 {{lastEdit.content}}
             </p>
