--- a/_08_SoftUniWiki/views/pages/history.hbs
+++ b/_08_SoftUniWiki/views/pages/history.hbs
@@ -1,5 +1,5 @@
 <section>
-    <h2>Astronomy</h2>
+    <h2>{{article.title}}</h2>
     <div class="spacer">
         <h3>Edit hostory</h3>
         <ul>
@@ -7,7 +7,7 @@
             {{#each edits}}
                 <li>
                     <a>{{creation}}</a>
-                    <span class="author">{{authorId}}</span>
+                    <span class="author">{{author}}</span>
                 </li>
             {{/each}}
 
