--- a/_08_SoftUniWiki/views/pages/register.hbs
+++ b/_08_SoftUniWiki/views/pages/register.hbs
@@ -2,8 +2,12 @@
     <h2>Register</h2>
     <div class="spacer">
         <form action="register" method="post">
-            <label>Email:</label>
-            <input type="text" name="email">
+            <label>Username:</label>
+            <input type="text" name="username">
+            <label>First name:</label>
+            <input type="text" name="firstName">
+            <label>Last name:</label>
+            <input type="text" name="lastName">
             <label>Password:</label>
             <input type="password" name="password">
             <label>Repeat password:</label>
