--- a/_08_EXpressWiki/views/layouts/main.hbs
+++ b/_08_EXpressWiki/views/layouts/main.hbs
@@ -4,55 +4,76 @@
 <head>
     <meta charset="UTF-8">
     <title>Wiki</title>
-    <link rel="stylesheet" href="/css/site.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+          integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 </head>
 
 <body>
-<div>
+<header>
+    <nav class="navbar navbar-dark bg-dark">
+        <a href="https://expressjs.com/en/starter/installing.html">
+            <img class="logo" src="/img/expressLogo.png" alt="logo"/>
+        </a>
 
-    <aside>
-        <div class="center">
-            <img class="logo" src="/img/logo.png" alt="logo">
-        </div>
-
-        <nav>
-            <a href="/home">Main Page</a>
-            <a href="/latestArticle">Latest Article</a>
-            <a href="/allArticles">All Articles</a>
-            <form action="/search" method="post">
-                <input type="text" name="search">
-                <input type="submit" value="Search">
+        {{#if currentUser}}
+            <span>Welcome, {{currentUser.username}}!</span>
+            <form id="logout-form" action="/logout" method="POST">
+                <button type="submit" class="btn btn-primary">Logout</button>
             </form>
+        {{else}}
+            <section class="nav_section">
+                <a class="btn btn-primary" href="/login">Login</a>
+                <a class="btn btn-primary" href="/register">Register</a>
+            </section>
+        {{/if}}
+    </nav>
+
+    <nav class="navbar navbar-light bg-light justify-content-between">
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link" href="/home">Main page</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/latestArticle">Latest article</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/allArticles">All articles</a>
+            </li>
             {{#if currentUser}}
-                <a href="/create">Create New Article</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="/create">Create new article</a>
+                </li>
             {{/if}}
-        </nav>
-    </aside>
+        </ul>
 
-    <div id="container">
+        <section id="search">
+            <form class="form-inline my-2 my-lg-0" action="/search" method="post">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </section>
+    </nav>
 
-        <header>
-            {{#if currentUser}}
-                <span>Welcome, {{currentUser.username}}!</span>
-                <form id="logout-form" action="/logout" method="POST"></form>
-                <a href="javascript:document.getElementById('logout-form').submit()">[Logout]</a>
-            {{else}}
-                <a href="/login">Login</a>
-                <a href="/register">Register</a>
-            {{/if}}
-        </header>
-
-        <main>
-            <h1>Welcome to SoftUni Wiki!</h1>
-            {{{body}}}
-        </main>
-
-        <footer>
-            SoftUni Wiki &copy; 2018
-        </footer>
-
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">Welcome to ExpressWiki!</h1>
+        </div>
     </div>
+</header>
+
+<main>
+
+
+    <section class="right_section">
+        {{{body}}}
+    </section>
+</main>
+
+<div class="card-footer text-muted">
+    SoftUni Wiki &copy; 2018
 </div>
+
 </body>
 
 </html>
