--- a/_08_EXpressWiki/views/pages/article.hbs
+++ b/_08_EXpressWiki/views/pages/article.hbs
@@ -1,21 +1,29 @@
-<div class="spacer">
-    <h2>{{article.title}}
-        <div class="controls">
-            {{#if currentUser}}
-               {{#if unlocked}}
-                <a href="/edit/{{article._id}}">[edit]</a>
-               {{/if}}
-            {{/if}}
-            {{#if currentUser}}
-                <a href="/history/{{article._id}}">[history]</a>
-            {{/if}}
-        </div>
-    </h2>
-    <article>
-        <img src="{{lastEdit.imageUrl}}">
-        <p>
-            {{lastEdit.content}}
-        </p>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4">{{article.title}}</h1>
+    </div>
+</div>
 
-    </article>
+<div class="container">
+    <div class="row">
+        {{#if currentUser}}
+            {{#if unlocked}}
+                <a type="button" class="btn btn-warning" href="/edit/{{article._id}}">Edit</a>
+            {{/if}}
+        {{/if}}
+        {{#if currentUser}}
+            <a type="button" class="btn btn-info" href="/history/{{article._id}}">History</a>
+        {{/if}}
+    </div>
+    <div class="row">
+        <div class="card mb-3">
+            <img class="card-img-top" src="{{lastEdit.imageUrl}}" alt="Card image cap">
+            <div class="card-body">
+
+                <h5 class="card-title">{{article.title}}</h5>
+
+                <p class="card-text">{{lastEdit.content}}</p>
+            </div>
+        </div>
+    </div>
 </div>
