--- a/_08_EXpressWiki/views/pages/login.hbs
+++ b/_08_EXpressWiki/views/pages/login.hbs
@@ -1,12 +1,32 @@
-<section>
-    <h2>Login</h2>
-    <div class="spacer">
-        <form action="/login" method="post">
-            <label>Username:</label>
-            <input type="text" name="username">
-            <label>Password:</label>
-            <input type="password" name="password">
-            <input type="submit" value="Login">
-        </form>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4">Welcome to ExpressWiki!</h1>
     </div>
-</section>
+</div>
+
+<div id="login-container"  class="container">
+    <h2>Login</h2>
+    <form id="login-form" action="/login" method="post">
+        <div class="form-group row">
+            <label for="inputPassword3" class="col-sm-2 col-form-label">Username: </label>
+            <div class="col-sm-10">
+                <input name="username" type="text" class="form-control" id="inputPassword3" placeholder="Username">
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label for="inputPassword3" class="col-sm-2 col-form-label">Password: </label>
+            <div class="col-sm-10">
+                <input name="password" type="password" class="form-control" id="inputPassword3" placeholder="Password">
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <div class="col-sm-10">
+                <button type="submit" class="btn btn-primary">Sign in</button>
+            </div>
+        </div>
+    </form>
+</div>
+
+
