--- a/_08_EXpressWiki/views/pages/register.hbs
+++ b/_08_EXpressWiki/views/pages/register.hbs
@@ -1,18 +1,50 @@
-<section>
-    <h2>Register</h2>
-    <div class="spacer">
-        <form action="register" method="post">
-            <label>Username:</label>
-            <input type="text" name="username">
-            <label>First name:</label>
-            <input type="text" name="firstName">
-            <label>Last name:</label>
-            <input type="text" name="lastName">
-            <label>Password:</label>
-            <input type="password" name="password">
-            <label>Repeat password:</label>
-            <input type="password" name="repeatedPassword">
-            <input type="submit" value="Register">
-        </form>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4">Welcome to ExpressWiki!</h1>
     </div>
-</section>
+</div>
+
+
+<div id="register-container" class="container">
+    <h2>Register</h2>
+    <form action="/register" method="post">
+        <div class="form-group row">
+            <label for="inputPassword3" class="col-sm-2 col-form-label">Username: </label>
+            <div class="col-sm-10">
+                <input name="username" type="text" class="form-control" id="inputPassword3" placeholder="Username">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputPassword3" class="col-sm-2 col-form-label">First name: </label>
+            <div class="col-sm-10">
+                <input name="firstName" type="text" class="form-control" id="inputPassword3" placeholder="First name">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputPassword3" class="col-sm-2 col-form-label">Last name: </label>
+            <div class="col-sm-10">
+                <input name="lastName" type="text" class="form-control" id="inputPassword3" placeholder="Last name">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputPassword3" class="col-sm-2 col-form-label">Password: </label>
+            <div class="col-sm-10">
+                <input name="password" type="password" class="form-control" id="inputPassword3" placeholder="Password">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-2 col-form-label">Repeat password: </label>
+            <div class="col-sm-10">
+                <input name="repeatedPassword" type="password" class="form-control" id="inputEmail3" placeholder="Repeat password">
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-sm-10">
+                <button type="submit" class="btn btn-primary">Sign up</button>
+            </div>
+        </div>
+    </form>
+</div>
+
+
+
